5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1595_825.log
== TEST (2019-03-26 16:31:18) 
-- CODE:
from math import pi
print(pi)
-- OUTPUT:
3.141592653589793
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:31:54) 
-- CODE:
from math import pi
a = 3*pi
print(a)
-- OUTPUT:
9.42477796076938
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:32:28) 
-- CODE:
from math import sqrt
print(sqrt)

-- OUTPUT:
<built-in function sqrt>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:32:41) 
-- CODE:
from math import sqrt
print(sqrt9)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(sqrt9)
NameError: name 'sqrt9' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:38:42) 
-- CODE:
from math import pi 
r=float(input("r:"))
A = pi*r**2
V = 4/3*pi*r**3
print(A)
print(V)
-- OUTPUT:
63.61725123519331
381.7035074111598
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:39:35) 
-- CODE:
from math import pi 
r=float(input("r:"))
A = pi*r**2
V = 4/3*pi*r**3
print(round(A,3))
print(round(V,3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:39:44) 
-- CODE:
from math import pi 
r=float(input("r:"))
A = pi*r**2
V = 4/3*pi*r**3
print(round(A,3))
print(round(V,3))
-- EXECUTION TIME:
0.151023
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
